Updated the system to precompute GT and ensure ratio and precision consistency